# irrops

./: .gitignore  Cargo.toml  README.md
data/: default.json  stress_test.json
src/: aircraft.rs  airport.rs  flight.rs  main.rs  schedule.rs  time.rs
src/schedule/: mod.rs  schedule.rs
src/schedule/tests/: assign.rs  curfew.rs  delay.rs  mod.rs  proptests.rs  utils.rs
tools/: gen.py
