[package]
name = "irrops"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
colored = "3"
rustyline = "17"
serde = {version = "1", features = ["derive", "rc"]}
serde_json = "1"
tabled = {version = "0.20.0", features = ["derive", "ansi"]}

[dev-dependencies]
proptest = "1"